--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ p {
           {
 	          	method: 'POST',
 	          	// method: 'GET',
-// 	          	mode: 'no-cors',
+	          	mode: 'no-cors',
 	          	// credentials: 'same-origin',
 	          	headers: {
 		            'Appian-API-Key': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJhYTdjYzc3NS1jYjg3LTRhZDItYjNkOC01YTM4Yzg4ZmEzMGEifQ.E227-gH6WkOWf4KMmOvZecDNjWQTR1ynz7Daqu5zK-I',
