--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@ p {
 //       }
       
  	function callAppian() {
- 		var url = "https://jnjscan2healthdev.appiancloud.com/suite/webapi/statusUpdate";
-
+//  		var url = "https://jnjscan2healthdev.appiancloud.com/suite/webapi/statusUpdate";
+		var url = "https://jnjscan2healthdev.appiancloud.com/suite/webapi/helloWorld";
 		var request = new XMLHttpRequest();
-		request.open("POST", url);
+// 		request.open("POST", url);
+		request.open("GET", url);
 
 		request.mode = "no-cors";
 
