--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@ p {
 
 <script>
 	function callAppian() {
- 		var url = "https://jnjscan2healthdev.appiancloud.com/suite/webapi/statusUpdate";
+ 		var url = "https://jnjscan2healthdev.appiancloud.com/suite/webapi/helloWorld";
 
 		var request = new XMLHttpRequest();
-		request.open("POST", url);
+		request.open("GET", url);
 
 		request.mode = "no-cors";
 
