--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@ p {
 		      console.log(request.responseText);
 		   }};
 
-		request.send(JSON.stringify("test": "test")
-			);
+		request.send(JSON.stringify({"test": "test"}));
 
 		return 0;
  	}
