--- a/index.html
+++ b/index.html
@@ -51,14 +51,19 @@ p {
 <p id="demo"></p>
 
 <script>
-	function callAppian() {
+
+ 	function callAppian(evt, envId) {
  		var url = "https://jnjscan2healthdev.appiancloud.com/suite/webapi/statusUpdate";
 
 		var request = new XMLHttpRequest();
 		request.open("POST", url);
 
+		request.mode = "no-cors";
+
 		request.setRequestHeader("Appian-API-Key", "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJhYTdjYzc3NS1jYjg3LTRhZDItYjNkOC01YTM4Yzg4ZmEzMGEifQ.E227-gH6WkOWf4KMmOvZecDNjWQTR1ynz7Daqu5zK-I");
 		request.setRequestHeader("Content-type", "application/json");
+		request.setRequestHeader("Access-Control-Allow-Origin", '*');
+		request.setRequestHeader("Access-Control-Allow-Credentials", true);
 
 		request.onreadystatechange = function () {
 		   if (request.readyState === 4) {
@@ -66,23 +71,23 @@ p {
 		      console.log(request.responseText);
 		   }};
 
-		request.send(JSON.stringify({"test": "test"}));
+		request.send(JSON.stringify({"envelopeId": envId, "event": evt}));
 
 		return 0;
  	}
 
 
 	var queryString = window.location.search;
-	console.log(queryString);
+	// console.log(queryString);
 	var urlParams = new URLSearchParams(queryString);
-	var status = urlParams.get('status');
 	var event = urlParams.get('event');
-	
-	console.log(event);
+	var envelopeId = urlParams.get('envelope');
 
 	document.getElementById("demo").innerHTML = urlParams.get('status');
 	
-    callAppian();
+    if (event === 'signing_complete') {
+    	callAppian(event, envelopeId);
+    }
 
 </script>
 
