--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@ p {
 
 </script>
 
-<div class="loader"></div>
+<!-- <div class="loader"></div> -->
 <div class="center">
-	<h2>Processing Document</h2>
-	<p>Please wait a moment while we process your document.</p>
+	<h2>Document Recieved</h2>
+	<p>Please click above to verify your document. </p>
 </div>
 
 </body>
