--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
 <style>
-.loader {
+/*.loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
   border-top: 16px solid #00B5E2;
@@ -16,7 +16,7 @@
   margin-right: auto;
   margin-top: 50px;
   margin-bottom: 40px;
-}
+}*/
 
 @-webkit-keyframes spin {	
   0% { -webkit-transform: rotate(0deg); }
