--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ p {
 
 <!-- <div class="loader"></div> -->
 <div class="center">
-	<h2>Document Recieved</h2>
-	<p>Please click above to verify your document. </p>
+	<h2>Document Received</h2>
+	<p>Please click on the above button to verify your document. </p>
 </div>
 
 </body>
