--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
 /*.loader {
   border: 16px solid #f3f3f3;
@@ -92,9 +93,12 @@ p {
 </script>
 
 <!-- <div class="loader"></div> -->
-<div class="center">
-	<h2>Document Received</h2>
-	<p>Please click on the above button to verify your document. </p>
+
+<div class="w3-display-container" style="margin-bottom:50px">
+  <img src="https://storage.pixteller.com/designs/designs-images/2019-03-27/05/simple-background-backgrounds-passion-simple-1-5c9b95bd34713.png" style="width:100%" height="300" >
+  <div class="w3-display-bottomleft w3-container w3-amber w3-hover-orange w3-hide-small"
+   style="bottom:60%;opacity:0.7;width:70%">
+  <h2><b>Document Received<br>Please click on the above button to verify your document.</b></h2>
 </div>
 
 </body>
