--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ p {
 <!-- <div class="loader"></div> -->
 
 <div class="w3-display-container" style="margin-bottom:50px">
-  <img src="https://storage.pixteller.com/designs/designs-images/2019-03-27/05/simple-background-backgrounds-passion-simple-1-5c9b95bd34713.png" style="width:100%" height="300" >
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTALxHe0Br-9WSTakFeCHFRyxBWXibqmSuxVA&usqp=CAU" style="width:100%" height="300" >
   <div class="w3-display-bottomleft w3-container w3-amber w3-hover-orange w3-hide-small"
    style="bottom:60%;opacity:0.7;width:70%">
   <h2><b>Document Received<br>Please click on the above button to verify your document.</b></h2>
