--- a/index.html
+++ b/index.html
@@ -3,41 +3,28 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <style>
-/*.loader {
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #00B5E2;
-  width: 100px;
-  height: 100px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-  margin-bottom: 40px;
-}*/
 
-@-webkit-keyframes spin {	
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
 
 .center {
 	margin: auto;
 	width: 50%;
 }
 
+.icon {
+	font-size:75px; 
+	text-align: center; 
+	margin: auto;
+	width: 100%; 
+	color:#01b3e1
+}
+
 h2 {
 	font-family: nunito;
 	text-align: center;
 	font-size: 28px;
+	font-weight: bold;
 }
 p {
 	font-family: nunito;
@@ -94,11 +81,10 @@ p {
 
 <!-- <div class="loader"></div> -->
 
-<div class="w3-display-container" style="margin-bottom:50px">
-  <img src="https://images.unsplash.com/photo-1588421357574-87938a86fa28?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" style="width:100%" height="300" >
-  <div class="w3-display-bottomleft w3-container w3-amber w3-hover-orange w3-hide-small"
-   style="bottom:60%;opacity:0.7;width:70%">
-  <h2><b>Document Received<br>Please click on the above button to verify your document.</b></h2>
+<i class="material-icons icon">fact_check</i>
+<div class="center">
+	<h2>Thanks for signing the Segmentation Checklist!</h2>
+	<p>Please click the refresh button to verify that your document has been received.</p>
 </div>
 
 </body>
