--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ p {
 
 <i class="material-icons icon">fact_check</i>
 <div class="center">
-	<h2>Thanks for Signing!</h2>
+	<h2>Thanks for signing!</h2>
 	<p>Please click the refresh button to verify that your document has been received.</p>
 </div>
 
