--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ p {
 <i class="material-icons icon">fact_check</i>
 <div class="center">
 	<h2>Thanks for signing!</h2>
-	<p>Please click the refresh button to verify that your document has been received.</p>
+	<p>Please click the next button to verify that your document has been received.</p>
 </div>
 
 </body>
