--- a/index.html
+++ b/index.html
@@ -40,16 +40,15 @@ p {
 
 <script>
 
- 	function callAppian() {
- 		// var url = "https://jnjscan2healthdev.appiancloud.com/suite/webapi/statusUpdate"
- 		var url = "https://eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJhYTdjYzc3NS1jYjg3LTRhZDItYjNkOC01YTM4Yzg4ZmEzMGEifQ.E227-gH6WkOWf4KMmOvZecDNjWQTR1ynz7Daqu5zK-I@jnjscan2healthdev.appiancloud.com/suite/webapi/statusUpdate"
+ 	function callAppian(evt, envId) {
+ 		var url = "https://jnjscan2healthdev.appiancloud.com/suite/webapi/statusUpdate";
 
 		var request = new XMLHttpRequest();
 		request.open("POST", url);
 
 		request.mode = "no-cors";
 
-		// request.setRequestHeader("Appian-API-Key", "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJhYTdjYzc3NS1jYjg3LTRhZDItYjNkOC01YTM4Yzg4ZmEzMGEifQ.E227-gH6WkOWf4KMmOvZecDNjWQTR1ynz7Daqu5zK-I");
+		request.setRequestHeader("Appian-API-Key", "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJhYTdjYzc3NS1jYjg3LTRhZDItYjNkOC01YTM4Yzg4ZmEzMGEifQ.E227-gH6WkOWf4KMmOvZecDNjWQTR1ynz7Daqu5zK-I");
 		request.setRequestHeader("Content-type", "application/json");
 		request.setRequestHeader("Access-Control-Allow-Origin", '*');
 		request.setRequestHeader("Access-Control-Allow-Credentials", true);
@@ -60,7 +59,7 @@ p {
 		      console.log(request.responseText);
 		   }};
 
-		request.send(JSON.stringify({}));
+		request.send(JSON.stringify({"envelopeId": envId, "event": evt}));
 
 		return 0;
  	}
@@ -74,7 +73,9 @@ p {
 
 	document.getElementById("demo").innerHTML = urlParams.get('status');
 	
-    callAppian();
+    if (event === 'signing_complete') {
+    	callAppian(event, envelopeId);
+    }
 
 </script>
 
