--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@ p {
 
 <script>
 
- 	function callAppian(evt, envId) {
- 		var url = "https://jnjscan2healthdev.appiancloud.com/suite/webapi/statusUpdate";
+ 	function callAppian(url, apiKey, evt, envId) {
+ 		var url = url;
 
 		var request = new XMLHttpRequest();
 		request.open("POST", url);
 
 		request.mode = "no-cors";
 
-		request.setRequestHeader("Appian-API-Key", "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJhYTdjYzc3NS1jYjg3LTRhZDItYjNkOC01YTM4Yzg4ZmEzMGEifQ.E227-gH6WkOWf4KMmOvZecDNjWQTR1ynz7Daqu5zK-I");
+		request.setRequestHeader("Appian-API-Key", apiKey);
 		request.setRequestHeader("Content-type", "application/json");
 		request.setRequestHeader("Access-Control-Allow-Origin", '*');
 		request.setRequestHeader("Access-Control-Allow-Credentials", true);
@@ -68,14 +68,14 @@ p {
 	var queryString = window.location.search;
 	// console.log(queryString);
 	var urlParams = new URLSearchParams(queryString);
+	var url = urlParams.get('url');
+	var apiKey = urlParams.get('apiKey');
 	var event = urlParams.get('event');
 	var envelopeId = urlParams.get('envelope');
 
 	document.getElementById("demo").innerHTML = urlParams.get('status');
 	
-    if (event === 'signing_complete') {
-    	callAppian(event, envelopeId);
-    }
+    callAppian(url, apiKey, event, envelopeId);
 
 </script>
 
