--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ p {
 <script>
 
  	function callAppian(url, apiKey, evt, envId) {
- 		var url = "https://" & url;
+ 		var url = url;
 
 		var request = new XMLHttpRequest();
 		request.open("POST", url);
