--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@ p {
 
 	document.getElementById("demo").innerHTML = urlParams.get('status');
 
-	console.log(event);
-	console.log(envelopeId);
-	console.log(redirectUrl);
-	console.log(redirectApiKey);
+// 	console.log(event);
+// 	console.log(envelopeId);
+// 	console.log(redirectUrl);
+// 	console.log(redirectApiKey);
 	
-    callAppian(redirectUrl, redirectApiKey, event, envelopeId);
+    	callAppian(redirectUrl, redirectApiKey, event, envelopeId);
 
 </script>
 
