--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 
 
 .left {
+	padding-top: 25px;
 	margin: auto;
 /*	width: 50%;*/
 }
 
 .icon {
 	padding-top: 45px;
-	font-size:110px; 
+	font-size:125px; 
 	text-align: left; 
 	margin: auto;
 	width: 100%; 
