--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 
 
 .left {
-	padding-top: 10px;
 	margin: auto;
 /*	width: 50%;*/
 }
 
 .icon {
-	padding-top: 200px;
-	font-size:125px; 
+	padding-top: 45px;
+	font-size:110px; 
 	text-align: left; 
 	margin: auto;
 	width: 100%; 
@@ -83,7 +82,8 @@ p {
 
 <!-- <div class="loader"></div> -->
 
-<i class="material-icons icon">fact_check</i>
+<!-- <i class="material-icons icon">fact_check</i> -->
+<img src="https://cdn.dribbble.com/users/466659/screenshots/4905804/file-sharing800.jpg" alt="Girl in a jacket">
 <div class="left">
 	<h2>Thanks for signing!</h2>
 	<p>Please click the next button to verify that your document has been received.</p>
