--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ p {
 <!-- <div class="loader"></div> -->
 
 <!-- <i class="material-icons icon">fact_check</i> -->
-<img src="https://cdn.dribbble.com/users/466659/screenshots/4905804/file-sharing800.jpg" alt="Girl in a jacket">
+<img src="https://i.pinimg.com/originals/41/85/a1/4185a1b6b4a453bfa8340dca90e2b4fa.png">
 <div class="left">
 	<h2>Thanks for signing!</h2>
 	<p>Please click the next button to verify that your document has been received.</p>
