--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 /*	width: 50%;*/
 }
 
+.crop {
+	height: 485px;
+}
+/*
 .icon {
 	padding-top: 45px;
 	font-size:110px; 
@@ -19,7 +23,7 @@
 	margin: auto;
 	width: 100%; 
 	color:#01b3e1
-}
+}*/
 
 h2 {
 	font-family: nunito;
@@ -83,7 +87,9 @@ p {
 <!-- <div class="loader"></div> -->
 
 <!-- <i class="material-icons icon">fact_check</i> -->
-<img src="https://i.pinimg.com/originals/41/85/a1/4185a1b6b4a453bfa8340dca90e2b4fa.png">
+<div class="crop">
+	<img src="https://i.pinimg.com/originals/41/85/a1/4185a1b6b4a453bfa8340dca90e2b4fa.png">
+</div>
 <div class="left">
 	<h2>Thanks for signing!</h2>
 	<p>Please click the next button to verify that your document has been received.</p>
