--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 .left {
 	margin: auto;
 /*	width: 50%;*/
+	padding-bottom: 300px;
 }
 
 .crop {
-	height: 485px;
+	height: 500px;
 }
 /*
 .icon {
