--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 	margin: auto;
 /*	width: 50%;*/
 	padding-bottom: 300px;
+	background-color: #FFF;
 }
 
 .crop {
+	padding-top:100px;
 	height: 500px;
 }
 /*
