--- a/index.html
+++ b/index.html
@@ -20,15 +20,9 @@
 	height: 500px;
 	background-color: #FFF;
 }
-/*
-.icon {
-	padding-top: 45px;
-	font-size:110px; 
-	text-align: left; 
-	margin: auto;
-	width: 100%; 
-	color:#01b3e1
-}*/
+.all{
+	background-color: #FFF;
+}
 
 h2 {
 	font-family: nunito;
@@ -92,12 +86,14 @@ p {
 <!-- <div class="loader"></div> -->
 
 <!-- <i class="material-icons icon">fact_check</i> -->
-<div class="crop">
+<div class="all" >
+	<div class="crop">
 	<img src="https://i.pinimg.com/originals/41/85/a1/4185a1b6b4a453bfa8340dca90e2b4fa.png">
 </div>
 <div class="left">
 	<h2>Thanks for signing!</h2>
 	<p>Please click the next button to verify that your document has been received.</p>
+</div>
 </div>
 
 </body>
