--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 .left {
 	margin: auto;
 /*	width: 50%;*/
-	padding-bottom: 300px;
+	padding-bottom: 100px;
 	background-color: #FFF;
 	padding-left: 10px;
 }
 
 .crop {
-	padding-top:100px;
+	padding-top:50px;
 	height: 500px;
 	background-color: #FFF;
 }
@@ -91,8 +91,8 @@ p {
 	<img src="https://i.pinimg.com/originals/41/85/a1/4185a1b6b4a453bfa8340dca90e2b4fa.png">
 </div>
 <div class="left">
-	<h2>Thanks for signing!</h2>
-	<p>Please click the next button to verify that your document has been received.</p>
+	<h2>Almost Done!</h2>
+	<p>Please click the next button to sign and authenticate.</p>
 </div>
 </div>
 
