--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@ p {
 
 <script>
 
- 	function callAppian(url, apiKey, evt, envId) {
- 		var url = "https://jnjscan2healthdev.appiancloud.com/suite/webapi/statusUpdate";
+ 	function callAppian(url, apiKey, evt, envId, caseId) {
+ 		var url = url;
 
 		var request = new XMLHttpRequest();
 		request.open("POST", url);
 
 		request.mode = "no-cors";
 
-		request.setRequestHeader("Appian-API-Key", "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJhYTdjYzc3NS1jYjg3LTRhZDItYjNkOC01YTM4Yzg4ZmEzMGEifQ.E227-gH6WkOWf4KMmOvZecDNjWQTR1ynz7Daqu5zK-I");
+		request.setRequestHeader("Appian-API-Key", apiKey);
 		request.setRequestHeader("Content-type", "application/json");
 		request.setRequestHeader("Access-Control-Allow-Origin", '*');
 		request.setRequestHeader("Access-Control-Allow-Credentials", true);
@@ -63,7 +63,7 @@ p {
 		      console.log(request.responseText);
 		   }};
 
-		request.send(JSON.stringify({"envelopeId": envId, "event": evt}));
+		request.send(JSON.stringify({"envelopeId": envId, "event": evt, "caseId": caseId}));
 
 		return 0;
  	}
@@ -76,10 +76,11 @@ p {
 	var apiKey = urlParams.get('apiKey');
 	var event = urlParams.get('event');
 	var envelopeId = urlParams.get('envelope');
+	var caseId = urlParams.get('caseId');
 
 	document.getElementById("demo").innerHTML = urlParams.get('status');
 	
-    callAppian(url, apiKey, event, envelopeId);
+    callAppian(url, apiKey, event, envelopeId, caseId);
 
 </script>
 
