--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@ p {
 <script>
 
  	function callAppian(url, apiKey, evt, envId, caseId) {
- 		var url = "https://jnjscan2healthdev.appiancloud.com/suite/webapi/statusUpdate";
+ 		var callbackUrl = url;
 
 		var request = new XMLHttpRequest();
-		request.open("POST", url);
+		request.open("POST", callbackUrl);
 
 		request.mode = "no-cors";
 
-		request.setRequestHeader("Appian-API-Key", "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJhYTdjYzc3NS1jYjg3LTRhZDItYjNkOC01YTM4Yzg4ZmEzMGEifQ.E227-gH6WkOWf4KMmOvZecDNjWQTR1ynz7Daqu5zK-I");
+		request.setRequestHeader("Appian-API-Key", apiKey);
 		request.setRequestHeader("Content-type", "application/json");
 		request.setRequestHeader("Access-Control-Allow-Origin", '*');
 		request.setRequestHeader("Access-Control-Allow-Credentials", true);
